<resources>
    <string name="app_name">Buscapet</string>

    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Senha</string>
    <string name="hint_register_first_name">Nome</string>
    <string name="hint_register_last_name">Sobrenome</string>
    <string name="hint_register_email">Email</string>
    <string name="hint_register_password">Senha</string>
    <string name="hint_register_confirm_password">Confirmar Senha</string>
    <string name="hint_ad_title">Título</string>
    <string name="hint_ad_description">Descrição</string>
    <string name="hint_pet_lost_title">Título da Publicação</string>
    <string name="hint_pet_lost_description">Descrição da Publicação</string>
    <string name="hint_type_message">Digite sua mensagem</string>
    <string name="hint_select_post_type">Clique no tipo de postagem que deseja criar</string>
    <string name="hint_danger_zone">Zona de perigo</string>
    <string name="hint_old_password">Senha antiga</string>
    <string name="hint_new_password">Nova senha</string>
    <string name="hint_confirm_new_password">Confirme a nova senha</string>

    <string name="cd_post_image">Imagem da Postagem</string>
    <string name="cd_avatar">Imagem do Perfil</string>
    <string name="cd_pet_avatar">Avatar do animal de estimação</string>
    <string name="cd_confirm_pet_picture">Confirmar a foto do animal de estimação</string>
    <string name="cd_take_photo">Tire uma foto do seu animal de estimação</string>
    <string name="cd_send_message">Envia mensagem para o chat</string>
    <string name="cd_advertisement">Novo Anúncio</string>
    <string name="cd_pet_lot">Animal Perdido</string>
    <string name="cd_pet_donation">Nova Doação</string>
    <string name="cd_ad_type">Tipo da Postagem</string>

    <string name="btn_sign_in">Entrar</string>
    <string name="btn_sign_up">Cadastrar</string>
    <string name="btn_publish">Publicar</string>
    <string name="btn_edit">Alterar</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_exit">Sair</string>
    <string name="btn_new_add">Novo Anúncio</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_back">Voltar</string>
    <string name="btn_post">Postar</string>
    <string name="btn_solve">Marcar como resolvido</string>
    <string name="btn_change_password">Alterar senha</string>
    <string name="btn_delete_user">Remover conta</string>
    <string name="btn_use_biometric">Usar biometria</string>


    <string name="lnk_register">Cadastro</string>

    <string name="msg_required_field">Campo obrigatório</string>
    <string name="msg_password_does_not_match">As senhas são diferentes</string>
    <string name="msg_password_changed">A senha foi alterada. No próximo login, lembre-se de usar as novas credenciais</string>
    <string name="msg_old_password_invalid">A senha antiga informada não é válida</string>
    <string name="msg_invalid_email">E-mail inválido</string>
    <string name="msg_invalid_credential">Credenciais inválidas</string>
    <string name="msg_login_welcome">Seja bem vindo, %1$s!</string>
    <string name="msg_user_created">Usuário criado com sucesso!</string>
    <string name="msg_permission_not_granted">Usuário não deu as permissões necessárias</string>
    <string name="msg_post_complete_successful">A postagem, %1$s, foi realizada com sucesso!</string>


    <string name="prompt_info_title">Buscapet Autenticação</string>
    <string name="prompt_info_subtitle">Por favor, efetue o login para ter acesso</string>
    <string name="prompt_info_description">Buscapet Autenticação Biométrica</string>
    <string name="prompt_info_use_app_password">Fazer login com usuário e senha</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_posts">Postagens</string>
    <string name="menu_profile">Perfil</string>

    <string name="screen_home">Home</string>
    <string name="screen_my_posts">Minhas Postagens</string>
    <string name="screen_post">Postagem</string>
    <string name="screen_gallery_post">Imagem da Postagem</string>
    <string name="screen_confirm_image_post">Confirmação de imagem</string>
    <string name="screen_post_type">Tipo da Postagem</string>
    <string name="screen_profile">Perfil</string>
    <string name="screen_advertisement">Dados da Postagem</string>

    <string name="secret_key_name">biometric_buscapet_encryption_key</string>

    <string-array name="ad_types">
        <item>Anúncio</item>
        <item>Doação</item>
        <item>Animal Perdido</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
