<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.etecmatao.buscapet.fragments.HomeFragment"
        android:label="@string/screen_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_advertisement"
            app:destination="@id/nav_advertisement"
            app:popUpTo="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="br.com.etecmatao.buscapet.fragments.ProfileFragment"
        android:label="@string/screen_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_my_posts"
        android:name="br.com.etecmatao.buscapet.fragments.MyPostsFragment"
        android:label="@string/screen_my_posts"
        tools:layout="@layout/fragment_my_posts" />
    <fragment
        android:id="@+id/nav_advertisement"
        android:name="br.com.etecmatao.buscapet.fragments.AdvertisementFragment"
        android:label="@string/screen_advertisement"
        tools:layout="@layout/fragment_advertisement" />
</navigation>